# smartcity

./: .gitignore  .vercelignore  README.md  app.py  docker-compose.n8n.yml  pyproject.toml  vercel.json  wsgi.py
client/: README.md  camera.py  communicator.py  config.py  install.sh  main.py  plate_reader.py  power_manager.py  requirements.txt
docs/: API.md  ARCHITECTURE.md  DATA_MODEL.md  DEPLOYMENT.md  HARDWARE_PRICING.md  N8N_INTEGRATION.md  OPERATIONS.md  PRESENTATION_2MIN_RO.md  PRODUCT_OVERVIEW.md  README.md  SECURITY.md  TROUBLESHOOTING.md  build_presentation_ro_docx.py
scripts/: capture_landing_screenshots.py
server/: .env.example  README.md  __init__.py  activity_log.py  app.py  availability_service.py  concierge_service.py  config.py  demo_accounts.py  demo_parking_data.py  find_parking_service.py  gemini_client.py  generate_vapid.py  geo_context.py  install.ps1  install.sh  mailer.py  models.py  n8n_events.py  n8n_routes.py  parking_nav_service.py  plate_document_verifier.py  pricing_engine.py  promo_service.py  push_notify.py  receipt_pdf.py  reputation_service.py  requirements.txt  routing_service.py  security.py  spot_prices.py  spots_service.py  terminal_config.yaml  two_factor.py  waitlist_service.py
server/scripts/: provision_edge.py
server/static/: README.md  account-plates.js  concierge.js  find-parking.js  landing.css  landing.js  manifest.json  my-spots.js  navigate-parking.js  page-transitions.js  park-maps.css  park-maps.js  portal-map.js  site.webmanifest  style.css  sw.js  wallet-topup.js
server/templates/: 404.html  README.md  (+18 more)
(+6 files in other folders)
